kubernetes/shared/gitea/gitea.yml

apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: shared
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: gitea
---

apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: shared
spec:
  type: NodePort
  ports:
    - port: 2222
      targetPort: 2222
      nodePort: 30121
      name: ssh
  selector:
    app: gitea

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: shared
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: gitea.zevrant-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-internal
  namespace: shared
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
spec:
  rules:
    - host: gitea.zevrant-services.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  name: http
  ingressClassName: nginx
  tls:
    - hosts:
        - gitea.zevrant-services.internal
      secretName: gitea-internal-tls

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: shared
  labels:
    app: gitea
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      imagePullSecrets:
        - name: harbor-ro
      #      dnsPolicy: ClusterFirst
      #      dnsConfig:
      #        nameservers:
      #          - 172.16.1.2
      #          - 1.1.1.1
      volumes:
        - name: keystore-volume
          emptyDir:
            sizeLimit: "1Mi"
        - name: config-copy
          emptyDir:
            sizeLimit: 1Mi
        - name: gitea-cert
          secret:
            secretName: gitea-tls
            defaultMode: 0400
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: gitea-config
          configMap:
            name: gitea
        - name: gitea-timezone
          persistentVolumeClaim:
            claimName: gitea-timezone
        - name: gitea-localtime
          persistentVolumeClaim:
            claimName: gitea-localtime
      containers:
        - name: gitea
          image: harbor.zevrant-services.internal/zevrant-services/gitea:latest
          #          command:
          #            - /bin/sh
          #          args:
          #            - -c
          #            - sleep 9999999999
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 2222
          volumeMounts:
            - name: gitea-cert
              mountPath: /opt/acme/certs
              readOnly: true
            - name: gitea-data
              mountPath: /var/lib/gitea
            - name: config-copy
              mountPath: /etc/gitea
            - name: gitea-timezone
              mountPath: /etc/timezone
            - name: gitea-localtime
              mountPath: /etc/localtime
          startupProbe:
            httpGet:
              scheme: HTTPS
              path: /api/healthz
              port: 3000
            failureThreshold: 14
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /api/healthz
              port: 3000
            failureThreshold: 5
            periodSeconds: 5
